Fullscreen spacing fix mobile + no zoom on unnecessary pages

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,7 @@
 	width: 100%;
 	color: #f2f2f2;
 	text-align: center;
-	font-size: 32px;
+	font-size: calc(16px + 1vw);
 	padding-top: 10px;
 	text-decoration: none;
 	transition: opacity .25s ease-in-out;
@@ -49,7 +49,7 @@
 	width: 100%;
 	color: #f2f2f2;
 	text-align: center;
-	font-size: 32px;
+	font-size: calc(16px + 1vw);
 	padding-top: 10px;
 	text-decoration: none;
 	transition: opacity .25s ease-in-out;
@@ -63,7 +63,7 @@
 	width: 100%;
 	color: #f2f2f2;
 	text-align: center;
-	font-size: 32px;
+	font-size: calc(16px + 1vw);
 	padding-top: 10px;
 	text-decoration: none;
 	transition: opacity .25s ease-in-out;
@@ -309,21 +309,36 @@ least to not care? Idk, but problem is there; */
 
 .fullscreenDiv{
 	top: 5vh;
-	left: 4vw;
+	left: 4.5vw;
 	position:fixed;
 	width:91vw;
 	height:90vh;
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
+.imgFullContainer{
+	float: left;
+	width:85%;
+	height:90%;
+}
+
 .imgFull{
 	position: relative;
 	float: left;
-	height: 91%;
+	 /* height: 90%;  Before object-fit, the old way*/
+	height: 100%;
+	width: 100%;
+	object-fit: contain;
     top: 0px;
     left: 0px;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .imgFullMobile{
@@ -368,7 +383,7 @@ least to not care? Idk, but problem is there; */
 	top: 0%;
 	background-color: black;
 	opacity: .7;
-	margin-right: 20px
+	margin-right: 2.5%;
 }
 
 
@@ -393,6 +408,12 @@ least to not care? Idk, but problem is there; */
 	transition: 0.2s;
 	color: #f2f2f2;
 	background-color: rgba(0,0,0,0);
+
+	-webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .arrows:hover {
